再接続できないので1時避難

--- a/DQN_MountainCar.ipynb
+++ b/DQN_MountainCar.ipynb
@@ -6,6 +6,7 @@
       "name": "DQN_MountainCar.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,39 +189,29 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# import"
+        "# その他のimport"
       ]
     },
     {
       "metadata": {
         "id": "ZG-NDV4AQIFS",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "4dc81937-72f4-4731-deac-308f3e4806f8"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
+        "import keras\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Activation, Flatten\n",
         "from keras.optimizers import Adam\n",
         "import gym\n",
+        "from gym import wrappers\n",
         "from rl.agents.dqn import DQNAgent\n",
         "from rl.policy import EpsGreedyQPolicy\n",
         "from rl.memory import SequentialMemory"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
@@ -282,15 +273,32 @@
       "metadata": {
         "id": "DGIdiFuXT1rk",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 209
+        },
+        "outputId": "565572a0-882f-457b-aefb-3cdbee1899d2"
       },
       "cell_type": "code",
       "source": [
         "env = gym.make(\"MountainCar-v0\")\n",
+        "env = wrappers.Monitor(env, './', force=True)\n",
         "nb_actions = env.action_space.n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-32-c2e10dd6383a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0menv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgym\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"MountainCar-v0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0menv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrappers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMonitor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'./'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mnb_actions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'wrappers' is not defined"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -773,19 +781,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "0e136a4b-68e1-43d5-d651-fdece3b00644"
+        "outputId": "d3248012-2bc7-4583-87bd-681bb7aa338f"
       },
       "cell_type": "code",
       "source": [
         "dqn.test(env, nb_episodes=1, visualize=True)"
       ],
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Testing for 1 episodes ...\n",
-            "Episode 1: reward: -177.000, steps: 177\n"
+            "Episode 1: reward: -84.000, steps: 84\n"
           ],
           "name": "stdout"
         },
@@ -793,29 +801,72 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f0cb907b208>"
+              "<keras.callbacks.History at 0x7f0cac61f7f0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 27
         }
       ]
     },
     {
       "metadata": {
-        "id": "fcO2jL0lKrMt",
-        "colab_type": "text"
+        "id": "w7tqxBNlSlsE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 173
+        },
+        "outputId": "90f18976-0eb4-44cd-a7b8-c1dd9b5835a2"
       },
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# "
+        "keras.callbacks.History()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-31-d0b00a7e8c9c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHistory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0x7f0cac61fef0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() takes 1 positional argument but 2 were given"
+          ]
+        }
       ]
     },
     {
       "metadata": {
-        "id": "w7tqxBNlSlsE",
+        "id": "QTavTeUHwZdG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "bMgPDkNsw7ju",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# 参考\n",
+        "色々役に立ちそうなkerasのcallback[https://keras.io/ja/callbacks/]"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "v0l5nywYw9SZ",
         "colab_type": "code",
         "colab": {}
       },
